infrastructure/security-groups.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Security groups for ALB, EC2, RDS, and Lambda ENI.

Resources:
  BastionSecurityGroup:
    Type: AWS::EC2:SecurityGroup
    Properties:
      GroupDescription: Bastion to EC2 Instances and RDS
      VpcId: !ImportValue MyVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: alb-sg
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic to ALB
      VpcId: !ImportValue MyVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: alb-sg

  EC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP from ALB
      VpcId: !ImportValue MyVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroup
      Tags:
        - Key: Name
          Value: ec2-asg-sg

  RDSDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow MySQL access from EC2 and Lambda
      VpcId: !ImportValue MyVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2InstanceSecurityGroup
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref LambdaSecurityGroup
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref BastionSecurityGroup
      Tags:
        - Key: Name
          Value: rds-mysql-sg

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Lambda ENI SG (access to RDS only)
      VpcId: !ImportValue MyVPCID
      Tags:
        - Key: Name
          Value: lambda-eni-sg

Outputs:
  ALBSecurityGroupId:
    Value: !Ref ALBSecurityGroup
    Export:
      Name: ALBSecurityGroup

  EC2InstanceSecurityGroupId:
    Value: !Ref EC2InstanceSecurityGroup
    Export:
      Name: EC2InstanceSecurityGroupID

  LambdaSecurityGroupId:
    Value: !Ref LambdaSecurityGroup
    Export:
      Name: LambdaSecurityGroupID

  RDSSecurityGroupID:
    Value: !Ref RDSDBSecurityGroup
    Export:
      Name: RDSSecurityGroupID
